--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@types/node": "^24.3.0",
     "dotenv": "^17.2.2",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
@@ -47,6 +46,7 @@
     "@babel/preset-typescript": "^7.27.1",
     "@testing-library/jest-native": "^5.4.3",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.3.1",
     "@types/react": "~19.0.10",
     "babel-jest": "^30.1.2",
     "eslint": "^9.25.0",
@@ -54,6 +54,7 @@
     "jest": "^30.1.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "^19.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
   "private": true,
@@ -72,5 +73,17 @@
     "testMatch": [
       "**/__tests__/**/*.spec.(ts|tsx|js)"
     ]
-  }
+  },
+  "description": "This is an [Expo](https://expo.dev) project created with [`create-expo-app`](https://www.npmjs.com/package/create-expo-app).",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Austin-Metke/438-Project-1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Austin-Metke/438-Project-1/issues"
+  },
+  "homepage": "https://github.com/Austin-Metke/438-Project-1#readme"
 }
