--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@types/node": "^24.3.0",
     "dotenv": "^17.2.2",
+    "enzyme": "^3.11.0",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -47,11 +48,14 @@
     "@babel/preset-typescript": "^7.27.1",
     "@testing-library/jest-native": "^5.4.3",
     "@types/jest": "^30.0.0",
+    "@types/jsdom": "^21.1.7",
     "@types/react": "~19.0.10",
     "babel-jest": "^30.1.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "jsdom": "^26.1.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "^19.0.0",
     "ts-jest": "^29.4.1",
