--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^7.1.6",
     "dotenv": "^17.2.2",
     "enzyme": "^3.11.0",
-    "expo": "~53.0.22",
+    "expo": "^54.0.9",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
@@ -28,6 +28,7 @@
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -37,20 +38,20 @@
     "react-dom": "19.0.0",
     "react-native": "^0.79.6",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-secure-store": "~14.2.4"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
     "@babel/preset-typescript": "^7.27.1",
     "@testing-library/jest-native": "^5.4.3",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.1",
     "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.3.1",
     "@types/react": "~19.0.10",
     "babel-jest": "^30.1.2",
     "eslint": "^9.25.0",
@@ -60,8 +61,8 @@
     "jsdom": "^26.1.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "^19.0.0",
-    "ts-node": "^10.9.2",
     "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
   "private": true,
