--- a/package.json
+++ b/package.json
@@ -38,17 +38,21 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "^3.19.1",
+    "react-native-redash": "^18.1.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-wagmi-charts": "^2.7.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-secure-store": "~14.2.4"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
