--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/node": "^24.3.0",
     "dotenv": "^17.2.2",
     "enzyme": "^3.11.0",
-    "expo": "^54.0.9",
+    "expo": "^54.0.10",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
@@ -35,9 +35,9 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-dom": "19.0.0",
-    "react-native": "^0.79.6",
+    "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.24.0",
@@ -49,7 +49,6 @@
     "react-native-screens": "~4.11.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.13.0",
-    "react-native-vector-icons": "^10.3.0",
     "react-native-wagmi-charts": "^2.7.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
