can now import my files to test in --esm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "allowImportingTsExtensions": true
   },
   "include": [
     "**/*.ts",
